--- a/style.scss
+++ b/style.scss
@@ -109,6 +109,31 @@ body {
         border: none;
     }
 }
+
+.modal {
+    display: grid;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    &__window {
+        width: 50%;
+        height: 30%;
+        padding: 20px;
+        display: grid;
+        align-self: center;
+        justify-items: center;
+        align-items: center;
+        margin: 0 auto;
+        background-color: #fff;
+        border-radius: 5px;
+
+
+        
+    }
+}
 // .event {
 //     margin-top: 100px;
 //     display: grid;
