--- a/srs/scss/style.scss
+++ b/srs/scss/style.scss
@@ -8,24 +8,30 @@ $backgroundError: #EEE0DE;
     margin: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 
 body {
     width: 100vw;
 }
+
 .calendar__container {
     margin-top: 100px;
     display: grid;
     justify-content: center;
-    // align-content: center;
-
 }
+
 .header {
     min-width: 100%;
     display: grid;
-    column-gap: 20px;
+    align-items: center;
+    row-gap: 10px;
     &__field, &__button {
         height: 30px;
         border-radius: 5px;
+        outline: none;
     }
 }
 .calendar{
@@ -38,18 +44,15 @@ body {
     &__header {
         background-color: $backgroundBodyTh;
     }
-
 }
-// .calendar__table {
-//     width: 100%;
-//     border-collapse: collapse;
-// }
+
 .row {
     display: grid;
     grid-template: 1fr / repeat(6, 1fr);
     height: 35px;
     &__sell {
         border: 1px solid $borderColor;
+        text-align: center;
     }
 }
 
@@ -129,17 +132,27 @@ body {
         margin: 0 auto;
         background-color: #fff;
         border-radius: 5px;
-
-
-        
+    }
+    &__button {
+        width: 80px;
+        height: 30px;
+    }
+    p {
+        font-size: 1.5rem;
     }
 }
-// .event {
-//     margin-top: 100px;
-//     display: grid;
-//     justify-content: center;
-// }
-
+.error{
+    width: 100%;
+    height: 50px;
+    padding-left: 20px;
+    display: grid;
+    grid-template: 1fr / auto 1fr;
+    column-gap: 20px;
+    align-items: center;
+    background-color: $backgroundError;
+    color: red;
+    font-size: 1.2rem;
+}
 
 @media(min-width:768px) {
     .container {
@@ -149,9 +162,11 @@ body {
         min-width: 768px;
         display: grid;
         grid-template: 1fr / 1fr 20% 20%;
+        column-gap: 20px;
+        // row-gap: 0;
+        
+    }
+    .calendar {
+        margin-top: 0;
     }
 }
-
-// .header {
-
-// }
