--- a/srs/scss/style.scss
+++ b/srs/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 $backgroundBodyTh : #E5E5E5;
 $backgroundActive : #D3F5B4;
 $borderColor: #CACACA;
@@ -15,18 +16,19 @@ a{
 
 body {
     width: 100vw;
+    font-family: 'Roboto', sans-serif;
 }
 
 .calendar__container {
     margin-top: 100px;
-    display: grid;
-    justify-content: center;
+
 }
 
 .header {
-    min-width: 100%;
+    min-width: 85%;
+    max-width: 85%;
+    margin: 0 auto;
     display: grid;
-    align-items: center;
     row-gap: 10px;
     &__field, &__button {
         height: 30px;
@@ -35,8 +37,9 @@ body {
     }
 }
 .calendar{
-    min-width: 100%;
-    margin-top: 25px;
+    min-width: 85%;
+    max-width: 85%;
+    margin: 25px auto 0 auto;
     &__table {
         width: 100%;
         border-collapse: collapse;
@@ -51,8 +54,8 @@ body {
     grid-template: 1fr / repeat(6, 1fr);
     height: 35px;
     &__sell {
+        padding-top: 15px;
         border: 1px solid $borderColor;
-        text-align: center;
     }
 }
 
@@ -77,10 +80,12 @@ body {
     display: grid;
     height: 35px;
     grid-template: 1fr / 30% 30% 1fr;
+    z-index: 1;
     &__name {
         align-self: center;
     }
     &__data {
+        position: relative;
         min-width: 120px;
         height: 30px;
         border: 1px solid #C7C7C7;
@@ -141,6 +146,7 @@ body {
         font-size: 1.5rem;
     }
 }
+
 .error{
     width: 100%;
     height: 50px;
@@ -154,19 +160,131 @@ body {
     font-size: 1.2rem;
 }
 
+.select {
+    display: grid;
+    grid-template: 1fr / 1fr 15%;
+    position: relative;
+    width: 100%;
+    height: 35px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .select__trigger {
+    display: grid;
+    width: 100%;
+    justify-self: start;
+    justify-items: center;
+    align-items: center;
+  }
+  
+  .select__trigger::after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background-size: cover;
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" height="100" width="100"%3E%3Cpath d="M97.625 25.3l-4.813-4.89c-1.668-1.606-3.616-2.41-5.84-2.41-2.27 0-4.194.804-5.777 2.41L50 52.087 18.806 20.412C17.223 18.805 15.298 18 13.03 18c-2.225 0-4.172.804-5.84 2.41l-4.75 4.89C.813 26.95 0 28.927 0 31.23c0 2.346.814 4.301 2.439 5.865l41.784 42.428C45.764 81.174 47.689 82 50 82c2.268 0 4.215-.826 5.84-2.476l41.784-42.428c1.584-1.608 2.376-3.563 2.376-5.865 0-2.26-.792-4.236-2.375-5.932z"/%3E%3C/svg%3E');
+  }
+  
+  .select__trigger:focus {
+    outline: none;
+  }
+  
+  .select_show .select__trigger::after {
+    transform: rotate(180deg);
+  }
+  
+  .select__dropdown {
+    display: none;
+    position: absolute;
+    top: 2.5rem;
+    left: 0;
+    right: 0;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    max-height: 10rem;
+    overflow-y: auto;
+    border-radius: 5px;
+  }
+  
+//   .select_show .select__dropdown {
+//     display: block;
+//   }
+  
+//   .select_show .select__backdrop {
+//     display: block;
+//   }
+  
+  .select__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  
+  .select__item {
+    padding: 0.375rem 0.75rem;
+  }
+  
+  .select__item_selected {
+    background-color: #e1f5fe;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .select__item_selected::after {
+    content: '';
+    width: 0.75rem;
+    height: 0.75rem;
+    color: #0277bd;
+    background-size: cover;
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" height="100" width="100" class="svg-inline--fa fa-check fa-w-16" data-icon="check" data-prefix="fas" aria-hidden="true"%3E%3Cpath d="M33.964 85.547l-32.5-32.251a4.935 4.935 0 010-7.017l7.071-7.017a5.027 5.027 0 017.071 0L37.5 60.987l46.894-46.534a5.028 5.028 0 017.07 0l7.072 7.017a4.935 4.935 0 010 7.017l-57.5 57.06a5.027 5.027 0 01-7.072 0z" fill="%230277bd"/%3E%3C/svg%3E');
+  }
+  
+  .select__item:hover {
+    background-color: #f5f5f5;
+  }
+  
+  .select__fieldWrap {
+      display: grid;
+      align-items: center;
+      width: auto;
+      z-index: 101;
+  }
+  .select__backdrop {
+    position: fixed;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: none;
+  }
+
+  .event__users{
+      z-index: 1000;
+  }
+
 @media(min-width:768px) {
     .container {
+        width: 85%;
         min-width: 768px;
     }
     .header {
+        max-width: 85%;
         min-width: 768px;
         display: grid;
         grid-template: 1fr / 1fr 20% 20%;
         column-gap: 20px;
-        // row-gap: 0;
-        
+        &__field, &__button {
+            margin-top: 20px;
+        }
     }
     .calendar {
-        margin-top: 0;
+        margin:  0 auto;
+    }
+    .row {
+        height: 50px;
     }
 }
