fix styles a bit

--- a/srs/scss/multiselect.scss
+++ b/srs/scss/multiselect.scss
@@ -22,10 +22,9 @@
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 0px;
   padding: 6px 12px;
   margin-bottom: 0;
-  font-size: 14px;
   font-weight: 400;
   line-height: 1.42857143;
   color: #333;
@@ -55,7 +54,6 @@
   background-color: #fff;
   border: 1px solid rgba(0,0,0,.15);
   box-shadow: 0 6px 12px rgba(0,0,0,.175);
-  font-size: 14px;
   text-align: left;
   list-style: none;
   background-clip: padding-box;
