--- a/srs/scss/multiselect.scss
+++ b/srs/scss/multiselect.scss
@@ -6,35 +6,41 @@
   align-items: center;
   overflow: visible;
   vertical-align: middle;
+  outline: none;
 }
 .multiselect-label{
   font-size: 14px;
   margin: 0 5px
 }
 .multiselect-data-container{
+  width: 100%;
   position: relative;
   overflow: visible;
   vertical-align: middle;
 }
 .multiselect-button{
+  width: 100%;
+  height: 30px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
   border: 0px;
-  padding: 6px 12px;
+  padding: 8px 6px;
   margin-bottom: 0;
   font-weight: 400;
   line-height: 1.42857143;
-  color: #333;
+  // color: #333;
   cursor: pointer;
+  outline: none;
 }
 
 .multiselect-text{
   border: 0;
   padding: 3px 0;
   width: 145px;
+  outline: none;
 }
 
 .multiselect-button input,
